--- a/src/components/RangeSlider/RangeSlider/RangeSlider.scss
+++ b/src/components/RangeSlider/RangeSlider/RangeSlider.scss
@@ -6,7 +6,7 @@
 
 .range-slider__block {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
   height: 100%;
 
