--- a/src/components/site-pages/index/demo.scss
+++ b/src/components/site-pages/index/demo.scss
@@ -27,10 +27,16 @@ body {
 
 .slider-3 {
   width: 100%;
+}
+
+#range-slider3 {
   height: 200px;
 }
 
 .slider-4 {
   width: 100%;
-  height: 400px;
+}
+
+#range-slider4 {
+  height: 350px;
 }
